--- a/style.css
+++ b/style.css
@@ -10,24 +10,24 @@ h1 {
     margin-top: 20px;
 }
 
-.dice-input {
-    margin: 20px;
+.dice-selector {
+    margin: 10px;
 }
 
 label {
     font-weight: bold;
 }
 
-#dice-pool {
+.dice-count, .dice-type {
     font-size: 24px;
     padding: 5px;
-    width: 80%;
 }
 
-#roll-button {
+#roll-button, #save-pool-button {
     padding: 15px 30px;
     font-size: 24px;
     cursor: pointer;
+    margin: 10px;
 }
 
 #result {
